fix: column wrap styling, don't capitalize admonoition

--- a/frontend/src/css/admonition.css
+++ b/frontend/src/css/admonition.css
@@ -18,7 +18,6 @@
 
 .admonition-title {
   font-weight: bold;
-  text-transform: capitalize;
   color: var(--admonition-heading-color);
 
   @apply tracking-wide;
